@@ -27,12 +27,11 @@ import org.springframework.ai.image.observation.ImageModelObservationConvention;
 import org.springframework.ai.image.observation.ImageModelObservationDocumentation;
 import org.springframework.ai.model.ModelOptionsUtils;
 import org.springframework.ai.openai.OpenAiImageModel;
-import org.springframework.ai.openai.api.OpenAiImageApi;
 import org.springframework.ai.openai.metadata.OpenAiImageGenerationMetadata;
 import org.springframework.ai.retry.RetryUtils;
+import org.springframework.core.retry.RetryTemplate;
 import org.springframework.http.ResponseEntity;
-import org.springframework.lang.Nullable;
-import org.springframework.retry.support.RetryTemplate;
+import org.jspecify.annotations.Nullable;
 import org.springframework.util.Assert;
 
 import java.util.List;
@@ -46,102 +45,112 @@ import java.util.List;
  */
 public class SiliconFlowImageModel implements ImageModel {
 
-    private static final Logger logger = LoggerFactory.getLogger(SiliconFlowImageModel.class);
+	private static final Logger logger = LoggerFactory.getLogger(SiliconFlowImageModel.class);
 
-    private static final ImageModelObservationConvention DEFAULT_OBSERVATION_CONVENTION = new DefaultImageModelObservationConvention();
+	private static final ImageModelObservationConvention DEFAULT_OBSERVATION_CONVENTION = new DefaultImageModelObservationConvention();
 
-    private final SiliconFlowImageOptions defaultOptions;
+	private final SiliconFlowImageOptions defaultOptions;
 
-    private final RetryTemplate retryTemplate;
+	private final RetryTemplate retryTemplate;
 
-    private final SiliconFlowImageApi siliconFlowImageApi;
+	private final SiliconFlowImageApi siliconFlowImageApi;
 
-    private final ObservationRegistry observationRegistry;
+	private final ObservationRegistry observationRegistry;
 
     @Setter
-    private ImageModelObservationConvention observationConvention = DEFAULT_OBSERVATION_CONVENTION;
+	private ImageModelObservationConvention observationConvention = DEFAULT_OBSERVATION_CONVENTION;
 
-    public SiliconFlowImageModel(SiliconFlowImageApi siliconFlowImageApi) {
-        this(siliconFlowImageApi, SiliconFlowImageOptions.builder().build(), RetryUtils.DEFAULT_RETRY_TEMPLATE);
-    }
+	public SiliconFlowImageModel(SiliconFlowImageApi siliconFlowImageApi) {
+		this(siliconFlowImageApi, SiliconFlowImageOptions.builder().build(), RetryUtils.DEFAULT_RETRY_TEMPLATE);
+	}
 
-    public SiliconFlowImageModel(SiliconFlowImageApi siliconFlowImageApi, SiliconFlowImageOptions options, RetryTemplate retryTemplate) {
-        this(siliconFlowImageApi, options, retryTemplate, ObservationRegistry.NOOP);
-    }
+	public SiliconFlowImageModel(SiliconFlowImageApi siliconFlowImageApi, SiliconFlowImageOptions options, RetryTemplate retryTemplate) {
+		this(siliconFlowImageApi, options, retryTemplate, ObservationRegistry.NOOP);
+	}
 
-    public SiliconFlowImageModel(SiliconFlowImageApi siliconFlowImageApi, SiliconFlowImageOptions options, RetryTemplate retryTemplate,
+	public SiliconFlowImageModel(SiliconFlowImageApi siliconFlowImageApi, SiliconFlowImageOptions options, RetryTemplate retryTemplate,
                                  ObservationRegistry observationRegistry) {
-        Assert.notNull(siliconFlowImageApi, "OpenAiImageApi must not be null");
-        Assert.notNull(options, "options must not be null");
-        Assert.notNull(retryTemplate, "retryTemplate must not be null");
-        Assert.notNull(observationRegistry, "observationRegistry must not be null");
-        this.siliconFlowImageApi = siliconFlowImageApi;
-        this.defaultOptions = options;
-        this.retryTemplate = retryTemplate;
-        this.observationRegistry = observationRegistry;
-    }
+		Assert.notNull(siliconFlowImageApi, "SiliconFlowImageApi must not be null");
+		Assert.notNull(options, "options must not be null");
+		Assert.notNull(retryTemplate, "retryTemplate must not be null");
+		Assert.notNull(observationRegistry, "observationRegistry must not be null");
+		this.siliconFlowImageApi = siliconFlowImageApi;
+		this.defaultOptions = options;
+		this.retryTemplate = retryTemplate;
+		this.observationRegistry = observationRegistry;
+	}
 
-    @Override
-    public ImageResponse call(ImagePrompt imagePrompt) {
+	@Override
+	public ImageResponse call(ImagePrompt imagePrompt) {
         SiliconFlowImageOptions requestImageOptions = mergeOptions(imagePrompt.getOptions(), this.defaultOptions);
         SiliconFlowImageApi.SiliconflowImageRequest imageRequest = createRequest(imagePrompt, requestImageOptions);
 
-        var observationContext = ImageModelObservationContext.builder()
-                .imagePrompt(imagePrompt)
-                .provider(SiliconFlowApiConstants.PROVIDER_NAME)
-                .imagePrompt(imagePrompt)
-                .build();
+		var observationContext = ImageModelObservationContext.builder()
+			.imagePrompt(imagePrompt)
+			.provider(SiliconFlowApiConstants.PROVIDER_NAME)
+            .imagePrompt(imagePrompt)
+			.build();
 
-        return ImageModelObservationDocumentation.IMAGE_MODEL_OPERATION
-                .observation(this.observationConvention, DEFAULT_OBSERVATION_CONVENTION, () -> observationContext,
-                        this.observationRegistry)
-                .observe(() -> {
-                    ResponseEntity<OpenAiImageApi.OpenAiImageResponse> imageResponseEntity = this.retryTemplate
-                            .execute(ctx -> this.siliconFlowImageApi.createImage(imageRequest));
+		return ImageModelObservationDocumentation.IMAGE_MODEL_OPERATION
+			.observation(this.observationConvention, DEFAULT_OBSERVATION_CONVENTION, () -> observationContext,
+					this.observationRegistry)
+			.observe(() -> {
+					ResponseEntity<SiliconFlowImageApi.SiliconFlowImageResponse> imageResponseEntity = RetryUtils.execute(
+							this.retryTemplate, () -> this.siliconFlowImageApi.createImage(imageRequest));
 
-                    ImageResponse imageResponse = convertResponse(imageResponseEntity, imageRequest);
+				ImageResponse imageResponse = convertResponse(imageResponseEntity, imageRequest);
 
-                    observationContext.setResponse(imageResponse);
+				observationContext.setResponse(imageResponse);
 
-                    return imageResponse;
-                });
-    }
+				return imageResponse;
+			});
+	}
 
-    private SiliconFlowImageApi.SiliconflowImageRequest createRequest(ImagePrompt imagePrompt,
+	private SiliconFlowImageApi.SiliconflowImageRequest createRequest(ImagePrompt imagePrompt,
                                                                       SiliconFlowImageOptions requestImageOptions) {
-        String instructions = imagePrompt.getInstructions().get(0).getText();
+		String instructions = imagePrompt.getInstructions().getFirst().getText();
 
-        SiliconFlowImageApi.SiliconflowImageRequest imageRequest = new SiliconFlowImageApi.SiliconflowImageRequest(instructions,
-                SiliconFlowApiConstants.DEFAULT_IMAGE_MODEL);
+		return new SiliconFlowImageApi.SiliconflowImageRequest(
+                instructions,
+                ModelOptionsUtils.mergeOption(requestImageOptions.getModel(), SiliconFlowApiConstants.DEFAULT_IMAGE_MODEL),
+                requestImageOptions.getN(),
+                requestImageOptions.getNegativePrompt(),
+                requestImageOptions.getSeed(),
+                requestImageOptions.getNumInferenceSteps(),
+                requestImageOptions.getGuidanceScale(),
+                requestImageOptions.getImage());
+	}
 
-        return ModelOptionsUtils.merge(requestImageOptions, imageRequest, SiliconFlowImageApi.SiliconflowImageRequest.class);
-    }
+	private ImageResponse convertResponse(ResponseEntity<SiliconFlowImageApi.SiliconFlowImageResponse> imageResponseEntity,
+										  SiliconFlowImageApi.SiliconflowImageRequest siliconflowImageRequest) {
+		SiliconFlowImageApi.SiliconFlowImageResponse imageApiResponse = imageResponseEntity.getBody();
+		if (imageApiResponse == null) {
+			logger.warn("No image response returned for request: {}", siliconflowImageRequest);
+			return new ImageResponse(List.of());
+		}
 
-    private ImageResponse convertResponse(ResponseEntity<OpenAiImageApi.OpenAiImageResponse> imageResponseEntity,
-                                          SiliconFlowImageApi.SiliconflowImageRequest siliconflowImageRequest) {
-        OpenAiImageApi.OpenAiImageResponse imageApiResponse = imageResponseEntity.getBody();
-        if (imageApiResponse == null) {
-            logger.warn("No image response returned for request: {}", siliconflowImageRequest);
-            return new ImageResponse(List.of());
-        }
+		List<ImageGeneration> imageGenerationList = imageApiResponse.data()
+			.stream()
+			.map(entry -> new ImageGeneration(new Image(entry.url(), entry.b64Json()),
+					new OpenAiImageGenerationMetadata(entry.revisedPrompt())))
+			.toList();
 
-        List<ImageGeneration> imageGenerationList = imageApiResponse.data()
-                .stream()
-                .map(entry -> new ImageGeneration(new Image(entry.url(), entry.b64Json()),
-                        new OpenAiImageGenerationMetadata(entry.revisedPrompt())))
-                .toList();
-
-        ImageResponseMetadata openAiImageResponseMetadata = new ImageResponseMetadata(imageApiResponse.created());
-        return new ImageResponse(imageGenerationList, openAiImageResponseMetadata);
-    }
+		ImageResponseMetadata openAiImageResponseMetadata = new ImageResponseMetadata(imageApiResponse.created());
+		return new ImageResponse(imageGenerationList, openAiImageResponseMetadata);
+	}
 
     private SiliconFlowImageOptions mergeOptions(@Nullable ImageOptions runtimeOptions, SiliconFlowImageOptions defaultOptions) {
-        var runtimeOptionsForProvider = ModelOptionsUtils.copyToTarget(runtimeOptions, ImageOptions.class,
-                SiliconFlowImageOptions.class);
-
-        if (runtimeOptionsForProvider == null) {
+        if (runtimeOptions == null) {
             return defaultOptions;
         }
+        SiliconFlowImageOptions runtimeOptionsForProvider = runtimeOptions instanceof SiliconFlowImageOptions siliconFlowImageOptions
+                ? siliconFlowImageOptions
+                : SiliconFlowImageOptions.builder()
+                    .model(runtimeOptions.getModel())
+                    .batchSize(runtimeOptions.getN())
+                    .width(runtimeOptions.getWidth())
+                    .height(runtimeOptions.getHeight())
+                    .build();
 
         return SiliconFlowImageOptions.builder()
                 // Handle portable image options
